[HW8] Add ClassLoader to FileUtil csv