@@ -5,8 +5,11 @@ import com.senla.carservice.exception.BusinessException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.List;
 
 public class FileUtil {
@@ -15,17 +18,34 @@ public class FileUtil {
     }
 
     public static void saveCsv(List<String> arrayValue, String path) {
-        try (PrintStream printStream = new PrintStream(new FileOutputStream(path))) {
+        ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
+        if (classLoader == null) {
+            throw new BusinessException("export problem");
+        }
+        URL url = classLoader.getResource(path);
+        if (url == null) {
+            throw new BusinessException("export problem");
+        }
+        try (PrintStream printStream = new PrintStream(new FileOutputStream(String.valueOf(Path.of(url.toURI()))))) {
             arrayValue.forEach(printStream::println);
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             throw new BusinessException("export problem");
         }
     }
 
     public static List<String> getCsv(String path) {
+        ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
+        List<String> csvLines = new ArrayList<>();
+        if (classLoader == null) {
+            return csvLines;
+        }
+        URL url = classLoader.getResource(path);
+        if (url == null) {
+            return csvLines;
+        }
         try {
-            return Files.readAllLines(Paths.get(path));
-        } catch (IOException ioException) {
+            return Files.readAllLines(Path.of(url.toURI()));
+        } catch (IOException | URISyntaxException ioException) {
             throw new BusinessException("import problem");
         }
     }
